[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/Dialog/VariablePanel.gd" type="Script" id=1]
[ext_resource path="res://addons/Dialog/Fonts/NotoSansCJKtc-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.14902, 0.14902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/minus_button_normal.png-4f9f1e8b41d0d24f1d3744d42b5fd737.stex"

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/minus_button_over.png-4d3ce244577877d5ba95f756758dc7c0.stex"

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/minus_button_disabled.png-9fe49bacdb4c07b68a09f314a71aef68.stex"

[node name="VariablePanel" type="Panel"]
margin_right = 183.0
margin_bottom = 118.0
rect_min_size = Vector2( 183, 118 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 171.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 55.0
margin_bottom = 23.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "Variable:"
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 59.0
margin_top = 3.0
margin_right = 135.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="deleteButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 139.0
margin_right = 171.0
margin_bottom = 32.0
hint_tooltip = "Delete the language selected.

([color=red]careful!!!![/color] it delete the language file in your harddisk)"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
texture_normal = SubResource( 3 )
texture_hover = SubResource( 4 )
texture_disabled = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="value_label" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 171.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "Set value:"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="value_container" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 171.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 22 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="item_rect_changed" from="VBoxContainer" to="." method="_on_VBoxContainer_item_rect_changed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/deleteButton" to="." method="_on_deleteButton_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
